{
    "name": "DronePodiumInputActions",
    "maps": [
        {
            "name": "DronePodium",
            "id": "078d3b0f-23f4-401e-8e2a-27792d2eb452",
            "actions": [
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "02d2d7c0-1e74-4e90-9476-b8c0682cf275",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "f0b94092-50f0-4a26-9517-f0dc90339049",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c67e66e-8a6f-43a0-9d03-2c80f7aac2af",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c1ce4d6-94de-46ce-b7ac-c7bb34f7bff5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}